fix details css on mobile

--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -55,3 +55,14 @@
     border-top: 4px solid yellow;
     
 }
+
+@media(max-width:470px) {
+    .img-details{
+        max-width: 100%;
+        margin-top: 30px;
+    }
+
+    .tittle-container{
+        flex-direction: column;
+    }
+}
